tests/language_modules/12_type_conflicts/invalid_semantics/alias_assignment_mismatch.vf
module AliasAssignmentMismatch

type Count is Integer range 0..100

procedure main()
is
    let total: Count = true
end main

end AliasAssignmentMismatch